[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.894118 )
margin_right = 1024.0
margin_bottom = 768.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurveEditor" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 624.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="CurveEditor"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 128.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 152.0
margin_right = 192.0
margin_bottom = 216.0
text = "Home"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="color_changed" from="CurveEditor/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="HomeButton" to="." method="_on_HomeButton_button_up"]
